# cortech

./: README.md  conanfile.txt  environment.yaml  meson.build  pyproject.toml
.github/workflows/: main.yaml
conan_profiles/: linux  windows
cortech/: __init__.py  _laplace.py  constants.py  cortex.py  freesurfer.py  interactive_visualization.py  meson.build  msh_to_vtm.py  sphere.py  surface.py  utils.py  visualization.py
cortech/cgal/: __init__.py  aabb_tree.pyx  aabb_tree_src.cpp  alpha_wrap_3.pyx  alpha_wrap_3_src.cpp  cgal_helpers.cpp  cgal_helpers.h  convex_hull_3.pyx  convex_hull_3_src.cpp  mesh_3.pyx  mesh_3_src.cpp  meson.build  polygon_mesh_processing.pyx  polygon_mesh_processing_src.cpp  surface_mesh_simplification.pyx  surface_mesh_simplification_src.cpp
cortech/examples/: example.py  meson.build
cortech/freesurfer/: __init__.py  io.py  meson.build  metadata.py
cortech/models/: __init__.py  meson.build  model_utils.py
cortech/models/equidistance/josa/: lh.equidistance.neighbor.frac.mgh  rh.equidistance.neighbor.frac.mgh
cortech/models/equivolume/josa/: global_fraction.csv
cortech/models/equivolume/spherical/: lh.equivolume.neighbor.frac.mgh  rh.equivolume.neighbor.frac.mgh
cortech/models/linear_model/josa/: lh.intercept.linear_model.mgh  rh.beta_k2.linear_model.mgh
cortech/models/linear_model/spherical/: lh.beta_k1.linear_model.mgh  lh.beta_k1k2.linear_model.mgh  lh.beta_k2.linear_model.mgh  lh.intercept.linear_model.mgh  rh.beta_k1.linear_model.mgh  rh.beta_k1k2.linear_model.mgh  rh.intercept.linear_model.mgh
cortech/scripts/: fit_infra_supra_border_invivo.py  fit_layer_models.py  process_exvivo_data.py
cortech/scripts/models/equidistance/spherical_reg/: global_fraction.csv  lh.equidistance.neighbor.frac.mgh  rh.equidistance.neighbor.frac.mgh
cortech/scripts/models/equivolume/josa/: lh.equivolume.neighbor.frac.mgh  rh.equivolume.neighbor.frac.mgh
cortech/scripts/models/linear_model/josa/: lh.beta_k1.linear_model.mgh  lh.beta_k1k2.linear_model.mgh  lh.beta_k2.linear_model.mgh  rh.beta_k1.linear_model.mgh  rh.beta_k1k2.linear_model.mgh  rh.intercept.linear_model.mgh
cortech/scripts/models/linear_model/spherical_reg/: rh.beta_k2.linear_model.mgh
examples/: layer_placement.py
tests/: conftest.py  test_cortex.py  test_surface.py  test_utils.py
tests/data/: make_test_data.sh
tests/data/bert_resampled/surf/: lh.pial  lh.white  lh.white.gii  lh.white.no_volgeom  lh.white.no_volgeom.gii  lh.white.scanner  lh.white.stripped  lh.white.vtk  rh.pial  rh.white
tests/freesurfer/: test_metadata.py
tools/: conda_generate_pkgs.py  enter-vsdevshell.bat  enter-vsdevshell.ps1
