python_sources = [
    '__init__.py',
    'constants.py',
    'cortex.py',
    'sphere.py',
    'surface.py',
    'utils.py',
    'visualization.py',
    'interactive_visualization.py',
]
python.install_sources(python_sources, subdir: 'cortech')

subdir('cgal')
subdir('freesurfer')
subdir('models')
subdir('bin')
