python_sources = [
    '__init__.py',
    'model_utils.py',
]
python.install_sources(python_sources, subdir: 'cortech' / 'models')
install_subdir('equidistance', install_dir : python.get_install_dir() / 'cortech' / 'models')
install_subdir('equivolume', install_dir : python.get_install_dir() / 'cortech' / 'models')
install_subdir('linear_model', install_dir : python.get_install_dir() / 'cortech' / 'models')
